--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -46,3 +46,23 @@
 .mt-16 {
     margin-top: 16px !important;
 }
+
+.btn {
+    display: inline-block;
+    color: #fff;
+    background-color: #000;
+    text-decoration: none;
+    padding: 11px 16px;
+    margin-top: 15px;
+    border: none;
+    cursor: pointer;
+}
+
+.btn:hover {
+    color: #000;
+    background-color: #ccc;
+}
+
+.pull-right {
+    float: right !important;
+}
