--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,8 @@ html {
 4. Kieu dang (kieu chu, hinh tron, vuong,...)
 */
 
+/* Common */
+
 /* Main */
 #main {
 
@@ -147,7 +149,7 @@ html {
     width: 800px;
     margin-left: auto;
     margin-right: auto;
-    padding: 64px 0;
+    padding: 64px 0 112px;
 }
 
 #content .section-heading {
@@ -227,7 +229,6 @@ html {
 /* Places */
 .places-list {
     margin-top: 32px;
-    padding-bottom: 48px;
 }
 
 .place-img {
@@ -260,22 +261,6 @@ html {
     line-height: 1.5;
 }
 
-.place-buy-btn {
-    display: inline-block;
-    color: #fff;
-    background-color: #000;
-    text-decoration: none;
-    padding: 11px 16px;
-    margin-top: 15px;
-    border: none;
-    cursor: pointer;
-}
-
-.place-buy-btn:hover {
-    color: #000;
-    background-color: #ccc;
-}
-
 /* Contact form */
 .contact-content {
     margin-top: 48px
@@ -301,24 +286,38 @@ html {
     width: 100%;
 }
 
-.contact-form .form-submit-btn {
-    font-size: 15px;
-    color: #fff;
-    background-color: #000;
-    border: 1px solid #000;
-    padding: 10px 14px;
-    float: right;
-    cursor: pointer;
-}
-
-.contact-form .form-submit-btn:hover {
-    color: #000;
-    background-color: #ccc;
+/* Map section */
+.map-section img {
+    width: 100%;
 }
 
 /* Footer section */
 #footer {
+    padding: 64px 16px;
+    text-align: center;
+}
 
+#footer .social-list {
+    font-size: 24px;
+}
+
+#footer .social-list a {
+    color: rgba(0,0,0,0.6);
+    text-decoration: none;
+}
+
+#footer .copyright a:hover,
+#footer .social-list a:hover {
+    color: rgba(0,0,0,0.4);
+}
+
+#footer .copyright {
+    margin-top: 15px;
+    color: rgba(0,0,0,0.6);
+}
+
+#footer .copyright a {
+    color: rgba(0,0,0,0.6);
 }
 
 /* Modal */
