--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -293,6 +293,15 @@ html {
     line-height: 1.5;
 }
 
+.contact-info a {
+    color: #101aef;
+    opacity: 0.8;
+}
+
+.contact-info a:hover {
+    opacity: 1;
+}
+
 .contact-info i[class*="ti-"] {
     width: 30px;
     display: inline-block;
@@ -311,6 +320,7 @@ html {
 /* Map section */
 .map-section img {
     width: 100%;
+    filter: grayscale(50%);
 }
 
 /* Footer section */
