--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -6,7 +6,37 @@
 
 /* Tablet >=740px & < 1024px */
 @media (min-width: 740px) and (max-width: 1023px) {
+}
+
+/* Tablet & Mobile  */
+@media (max-width: 1023px) {
+    .btn {
+        padding: 16px 16px;
+    }
     
+    #nav .subnav a {
+        padding: 5px 12px;
+    }
+
+    .contact-form .form-control {
+        padding: 15px;
+    }
+    
+    .contact-info {
+        line-height: 2;
+    }
+
+    #footer .social-list {
+        font-size: 36px;
+    }
+
+    #footer .social-list a {
+        margin: 0 8px;
+    }
+
+    #footer .copyright {
+        padding: 12px 0;
+    }
 }
 
 /* Mobile < 740px */
@@ -63,7 +93,7 @@
     }
 
     .contact-form {
-        margin-top: 16px;
+        margin-top: 32px;
     }
 
 }
